Added code review changes

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "nodemon": "^2.0.12"
     },
     "scripts": {
-        "start": "set PORT=3000 && npm-run-all --parallel spa api-server",
+        "start": "npm-run-all --parallel spa api-server",
         "spa": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
